# date2018

./: Dockerfile  README.md  install-toolnumberone  install-toolnumbertwo
clang-toolnumberone/: CMakeLists.txt
clang-toolnumberone/include/: Log.h  Utils.h
clang-toolnumberone/include/Core/: Mutant.h  MutationOperator.h  MutationTemplate.h  Mutator.h
clang-toolnumberone/include/Operators/: Operators.h
clang-toolnumberone/include/Testing/: MutatorsTesting.h  ToolnumberoneTest.h
clang-toolnumberone/include/Tooling/: CompilationDatabaseUtils.h  FrontendActions.h  ToolnumberoneTool.h
clang-toolnumberone/src/: CMakeLists.txt  Doxyfile.in  Log.cpp  Utils.cpp  main.cpp
clang-toolnumberone/src/Core/: MutationOperator.cpp  MutationTemplate.cpp
clang-toolnumberone/src/Testing/: CMakeLists.txt  ToolnumberoneTest.cpp
clang-toolnumberone/src/Tooling/: CMakeLists.txt  CompilationDatabaseUtils.cpp  FrontendActions.cpp  ToolnumberoneTool.cpp
projects/black_scholes/mutation/: launch.sh
projects/black_scholes/optimizator/: compile_commands.json  launch.sh  optimizator_functions.cpp
projects/black_scholes/src/: BlackScholes
toolnumbertwo/: CMakeLists.txt
toolnumbertwo/include/: Log.h  Utils.h
toolnumbertwo/include/Core/: AprxContext.h  AprxTechnique.h  EvolutionContext.h
toolnumbertwo/include/ExecutionEngineHelper/: ExecutionEngineHelper.h
toolnumbertwo/include/Tool/: ToolnumbertwoTool.h
toolnumbertwo/src/: Doxyfile.in  Log.cpp  Utils.cpp  main.cpp
toolnumbertwo/src/Core/: AprxContext.cpp  EvolutionContext.cpp
toolnumbertwo/src/Tool/: CMakeLists.txt  (+1 more)
(+37 files in other folders)
